Issue #19682: Fix compatibility issue with old version of OpenSSL that was introduced by Issue #18379.